# TrabalhoGrafos

./: LICENSE  README.md  TrabalhoGrafos.cabal
src/: Main.hs
src/Graph/: Digraph.hs  DistTable.hs  Graph.hs  Parse.hs  SpanningTree.hs  grafo.txt
tests/: g1.txt  g2.txt  g3.txt  graph3.txt  graph4.txt  graph5.txt
