name:                TrabalhoGrafos
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/TrabalhoGrafos#readme
license:             AGPL-3
license-file:        LICENSE
author:              Leonardo M. Rodrigues
                     Valéria S. Girelli
                     Marcos Vinicios da Silva
                     
maintainer:          lmrodrigues@inf.ufrgs.br
                     vsgirelli@inf.ufrgs.br
                     mvdasilva@inf.ufrgs.br
                     
copyright:           2016
                     Leonardo M. Rodrigues
                     Valéria S. Girelli
                     Marcos Vinicios da Silva

build-type:          Simple
cabal-version:       >=1.22

executable TrabalhoGrafos
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7,
                       containers >= 0.5.6.2
  other-modules:
                Graph.Parse
                Graph.Graph
                Graph.Digraph
                Graph.SpanningTree

                